# protobuf

./: BUILD.bazel  WORKSPACE
codec/: BUILD.bazel
gogoproto/: BUILD.bazel
io/: BUILD.bazel
jsonpb/: BUILD.bazel
jsonpb/jsonpb_test_proto/: BUILD.bazel
proto/: BUILD.bazel
proto/proto3_proto/: BUILD.bazel
protoc-gen-combo/: BUILD.bazel
protoc-gen-gofast/: BUILD.bazel
protoc-gen-gogo/: BUILD.bazel
protoc-gen-gogo/descriptor/: BUILD.bazel
protoc-gen-gogo/generator/: BUILD.bazel
protoc-gen-gogofast/: BUILD.bazel
protoc-gen-gogofaster/: BUILD.bazel
protoc-gen-gogoslick/: BUILD.bazel
protoc-gen-gogotypes/: BUILD.bazel
protoc-gen-gostring/: BUILD.bazel
protoc-min-version/: BUILD.bazel
types/: BUILD.bazel
vanity/test/: BUILD.bazel
